[gd_scene load_steps=6 format=3 uid="uid://bdtrscgohqq3x"]

[ext_resource type="Script" path="res://knife_summon.gd" id="1_7qi58"]
[ext_resource type="Texture2D" uid="uid://dgck4alsky6yr" path="res://assets/sprites/items/knife.png" id="1_evgaw"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="2_oxbtd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h3m5q"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ish3h"]
radius = 96.0469

[node name="KnifeSummon" type="CharacterBody2D"]
script = ExtResource("1_7qi58")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 9.53674e-07)
scale = Vector2(0.06, 0.06)
texture = ExtResource("1_evgaw")

[node name="Hitbox" type="Area2D" parent="."]
scale = Vector2(0.2, 0.2)
script = ExtResource("2_oxbtd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-5, 0)
shape = SubResource("CircleShape2D_h3m5q")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TargetRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetRange"]
shape = SubResource("CircleShape2D_ish3h")

[connection signal="reached_target" from="." to="." method="_on_reached_target"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
